--- a/README
+++ b/README
@@ -23,5 +23,7 @@ if there is a memory problem it is good to set heap range for muscle with additi
 --heap "128m..216m"
 
 4.You can run it in GridSpace on ui (https://gs2.mapper-project.eu/2.4.0-SNAPSHOT/) with Muscle interpreter 
-using cxa contents in snippet (change classpath in CxA to the absolute path)
+using cxa contents in snippet (change classpath in CxA to the absolute path).
+
+For running it in the GS on ui you may have to manually install ruby gem json
   
