--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This is a prototype of multiscale application skeleton framework.
-Its experimental and will not be working now !
+This is experimental, could produce errors
 
 The framework generates Muscle (http://muscle.berlios.de) project from specyfication in MASK DSL 
 (see examples/model1.mask) 
